# aganitha-python-takehome-2025

./: LICENSE  README.md  cli.py  pyproject.toml
papers/: fetcher.py
